WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
83860
ASSERT(compositor->inCompositingMode()) in FrameView::clearBackingStores, when composition is not present.
https://bugs.webkit.org/show_bug.cgi?id=83860
Summary
ASSERT(compositor->inCompositingMode()) in FrameView::clearBackingStores, whe...
alan baradlay
Reported
2012-04-12 22:45:00 PDT
running dumpRenderTree on LayoutTests/touchadjustment/scroll-delegation/iframe-with-mainframe-scroll-offset.html crash log for DumpRenderTree (pid 15712): STDOUT: <empty> STDERR: ASSERTION FAILED: compositor->inCompositingMode() STDERR: ../../../../Source/WebCore/page/FrameView.cpp(657) : void WebCore::FrameView::clearBackingStores() STDERR: 1 0x7f2815382862 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQtWebKit.so.4(_ZN7WebCore9FrameView18clearBackingStoresEv+0x6a) [0x7f2815382862] STDERR: 2 0x7f2815386428 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQtWebKit.so.4(_ZN7WebCore9FrameView27delegatesScrollingDidChangeEv+0x18) [0x7f2815386428] STDERR: 3 0x7f281548c430 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQtWebKit.so.4(_ZN7WebCore10ScrollView21setDelegatesScrollingEb+0x48) [0x7f281548c430] STDERR: 4 0x7f28156ea9e3 /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQtWebKit.so.4(_ZN7WebCore9Internals21setDelegatesScrollingEbPNS_8DocumentERi+0xa1) [0x7f28156ea9e3] STDERR: 5 0x7f2815dcf76f /home/webkitbuildbot/slaves/debug64bit/buildslave/qt-linux-64-debug/build/WebKitBuild/Debug/lib/libQtWebKit.so.4(_ZN7WebCore49jsInternalsPrototypeFunctionSetDelegatesScrollingEPN3JSC9ExecStateE+0x297) [0x7f2815dcf76f] STDERR: 6 0x7f27c8ef7258 [0x7f27c8ef7258]
Attachments
Patch
(3.69 KB, patch)
2012-04-13 02:35 PDT
,
alan baradlay
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan baradlay
Comment 1
2012-04-13 01:16:22 PDT
can also be reproduced with QtTestBrowser 1, load google.hu 2, switch to resizeToContentsMode assert hits 1, load
http://www.webkit.org/blog-files/3d-transforms/transform-style.html
2, switch to resizetoContentsMode no assert pages with no composition asserts when setting delegates scrolling on/off.
alan baradlay
Comment 2
2012-04-13 02:35:25 PDT
Created
attachment 137064
[details]
Patch
alan baradlay
Comment 3
2012-04-13 02:36:35 PDT
Ideas for a more appropriate subdir for the test page?
WebKit Review Bot
Comment 4
2012-04-13 04:12:14 PDT
Comment on
attachment 137064
[details]
Patch Clearing flags on attachment: 137064 Committed
r114109
: <
http://trac.webkit.org/changeset/114109
>
WebKit Review Bot
Comment 5
2012-04-13 04:12:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug