Enabling/disabling delegates scrolling when page has no composited content asserts on WK1. https://bugs.webkit.org/show_bug.cgi?id=83860

Patch by Zalan Bujtas <zbujtas@gmail.com> on 2012-04-13
Reviewed by Kenneth Rohde Christiansen.

Source/WebCore:

WK2 has compositing mode on all the time, while Wk1 turns it on only when
the page has composited content. This patch ensures that, when delegates scrolling behavior
is changed, backing stores are cleared only when there's an actual composition,
similarly to what CachedFrame does.

Test: fast/viewport/scroll-delegates-switch-on-page-with-no-composition-mode-asserts.html

* page/FrameView.cpp:
(WebCore::FrameView::delegatesScrollingDidChange):

LayoutTests:

* fast/viewport/scroll-delegates-switch-on-page-with-no-composition-mode-asserts-expected.txt: Added.
* fast/viewport/scroll-delegates-switch-on-page-with-no-composition-mode-asserts.html: Added.

git-svn-id: svn://svn.chromium.org/blink/trunk@114109 bbb929c8-8fbe-4397-9dbb-9b2b20218538